syntax = "proto3";

package documents;


message Document {
    string userid = 1;
    string name = 2;
    string content = 3;
    string folderid = 4;
}

message DocumentResult {
    string result = 1;
}

message FolderAddReq {
    string name = 1;
    string userid = 2;
}

message FolderAddResp {
    string result = 1;
}

message FoldersReadReq {
    string userid = 1;
}

message Folder {
    string name = 1;
    string userid = 2;
}

message FoldersReadResp {
    repeated Folder Folders = 1;
}

service DocumentsService {
    rpc CreateDocument(Document) returns (DocumentResult); 
    rpc AddFolder(FolderAddReq) returns (FolderAddResp);
    rpc ReadFolders(FoldersReadReq) returns (FoldersReadResp);
}